[tool.poetry]
name = "sms-sim"
version = "0.1.0"
description = "SMS Simulation Exercise"
authors = ["Zachary Ward <zward99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10.2"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
